--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,10 @@
-.label {
+.Container {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.Label {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 18px;
@@ -8,17 +14,17 @@
     line-height: 1.5em;
   }
   
-  .input {
-    display: block;
-    width: 200px;
-    margin-bottom: 30px;
-    margin-top: 10px;
-    font-size: 14px;
-    font-weight: 500;
-    color: #303086;
-    letter-spacing: 0.05em;
-    line-height: 1.5em;
-    border: 1px solid #303086;
-    border-radius: 5px;
-    padding-left: 10px;
-  }
+.Input {
+  display: block;
+  width: 200px;
+  margin-bottom: 30px;
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #303086;
+  letter-spacing: 0.05em;
+  line-height: 1.5em;
+  border: 1px solid #303086;
+  border-radius: 5px;
+  padding-left: 10px;
+}
