--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .Container{
     display: grid;
     gap: 15px;
-    max-width: 960px;
+    min-width: 320px;
     margin: auto 0;
     padding: 0 15px;
 }
